--- a/source/form.html
+++ b/source/form.html
@@ -1,86 +1,80 @@
 {% set pageId = 2 %}
 {% set permalink = pages[pageId].path %}
+{% extends "./templates/layout.twig" %}
 
-<!DOCTYPE html>
-<html class="page" lang="ru">
-{% include "./templates/head.twig" %}
-
-<body class="page__body">
-
+{% block page__header %}
   {% include "./templates/header.twig" %}
-
-    <main class="main">
-      <div class="page__centerer page__form-title-container">
-        <h1 class="page__form-title">Подбор программы</h1>
-        <p class="request-to-user">Заполните анкету, и&nbsp;мы&nbsp;подберем<br>программу питания для вашего кота</p>
+{% endblock page__header %}
+{% block page__main %}
+<main class="main">
+  <div class="page__centerer page__form-title-container">
+    <h1 class="page__form-title">Подбор программы</h1>
+    <p class="request-to-user">Заполните анкету, и&nbsp;мы&nbsp;подберем<br>программу питания для вашего кота</p>
+  </div>
+    <form action="https://echo.htmlacademy.ru" method="post" class="form-cat-program page__centerer">
+      <div class="form-cat-program__cat-info">
+        <fieldset class="inputs-group inputs-group--type_cat form-cat-program__border">
+          <legend class="inputs-group__group-title-hidden visually-hidden">Имя, возраст, вес</legend>
+          <label class="inputs-group__input-label" for="catname">
+            Имя:*
+            <input class="inputs-group__input" id="catname" name="catname" type="text" required value="Барсик" placeholder="Введите значение">
+          </label>
+          <label class="inputs-group__input-label" for="weight">
+            Вес (кг):*
+            <input class="inputs-group__input" id="weight" name="weight" type="number" required value="7" placeholder="Введите значение">
+          </label>
+          <label class="inputs-group__input-label" for="age">
+            Возраст (лет):*
+            <input class="inputs-group__input" id="age" name="age" type="number" required value="7" placeholder="Введите значение">
+          </label>
+        </fieldset>
+        <fieldset class="inputs-group inputs-group--type_program form-cat-program__border">
+          <legend class="inputs-group__group-title-hidden visually-hidden">Тип программы</legend>
+          <input class="inputs-group__input-radio visually-hidden" id="slimming" name="program" value="slimming"  type="radio" checked>
+          <label class="inputs-group__input-label" for="slimming">похудение</label>
+          <input class="inputs-group__input-radio visually-hidden" id="weight-gain" name="program" value="weight-gain" type="radio">
+          <label class="inputs-group__input-label" for="weight-gain">Набор массы</label>
+          <input class="inputs-group__input-radio visually-hidden" id="not-decide" name="program"  value="not-decide" type="radio">
+          <label class="inputs-group__input-label" for="not-decide">Не знаю (Нужен ваш совет)</label>
+        </fieldset>
       </div>
-        <form action="https://echo.htmlacademy.ru" method="post" class="form-cat-program page__centerer">
-          <div class="form-cat-program__cat-info">
-            <fieldset class="inputs-group inputs-group--type_cat form-cat-program__border">
-              <legend class="inputs-group__group-title-hidden visually-hidden">Имя, возраст, вес</legend>
-              <label class="inputs-group__input-label" for="catname">
-                Имя:*
-                <input class="inputs-group__input" id="catname" name="catname" type="text" required value="Барсик" placeholder="Введите значение">
-              </label>
-              <label class="inputs-group__input-label" for="weight">
-                Вес (кг):*
-                <input class="inputs-group__input" id="weight" name="weight" type="number" required value="7" placeholder="Введите значение">
-              </label>
-              <label class="inputs-group__input-label" for="age">
-                Возраст (лет):*
-                <input class="inputs-group__input" id="age" name="age" type="number" required value="7" placeholder="Введите значение">
-              </label>
-            </fieldset>
-            <fieldset class="inputs-group inputs-group--type_program form-cat-program__border">
-              <legend class="inputs-group__group-title-hidden visually-hidden">Тип программы</legend>
-              <input class="inputs-group__input-radio visually-hidden" id="slimming" name="program" value="slimming"  type="radio" checked>
-              <label class="inputs-group__input-label" for="slimming">похудение</label>
-              <input class="inputs-group__input-radio visually-hidden" id="weight-gain" name="program" value="weight-gain" type="radio">
-              <label class="inputs-group__input-label" for="weight-gain">Набор массы</label>
-              <input class="inputs-group__input-radio visually-hidden" id="not-decide" name="program"  value="not-decide" type="radio">
-              <label class="inputs-group__input-label" for="not-decide">Не знаю (Нужен ваш совет)</label>
-            </fieldset>
-          </div>
-          <fieldset class="inputs-group inputs-group--type_contacts">
-            <legend class="inputs-group__group-title"><span class="inputs-group__group-title-text inputs-group__group-title-text--contacts">Контактные данные (владельца кота)</span></legend>
-            <div class="inputs-group inputs-group--contacts-container">
-              <label class="inputs-group__input-label inputs-group__input-label--email" for="email">
-                E-mail:*
-                <input class="inputs-group__input" id="email" name="email" type="email" required value="kuklachev@gmail.com" placeholder="Введите ваш E-mail">
-                <svg class="inputs-group__contacts-icon">
-                  <use href="./img/contacts.svg#email"></use>
-                </svg>
-              </label>
-              <label class="inputs-group__input-label inputs-group__input-label--phone" for="phone">
-                Телефон:*
-                <input class="inputs-group__input" id="phone" name="phone" type="tel" required value="8 (960) 900-60-90" placeholder="Введите номер вашего телефона">
-                <svg class="inputs-group__contacts-icon">
-                  <use xlink:href="./img/contacts.svg#phone"></use>
-                </svg>
-              </label>
-            </div>
-          </fieldset>
-            <label class="inputs-group inputs-group--comment-label">
-              <span class="inputs-group__group-title"><span class="inputs-group__group-title-text inputs-group__group-title-text--comment">Комментарий</span></span>
-              <textarea class="inputs-group__comment" name="comment" placeholder="Расскажите обо всех повадках кота"></textarea>
-            </label>
-          <fieldset class="inputs-group inputs-group--type_additionals">
-            <legend class="inputs-group__group-title inputs-group__group-title--additional"><span class="inputs-group__group-title-text inputs-group__group-title-text--additional">Дополнения</span></legend>
-            <div class="inputs-group__checkbox-container">
-              <input class="inputs-group__input-checkbox visually-hidden" id="sugar-substitiute" name="additionals" value="sugar-substitiute" type="checkbox" checked><label class="inputs-group__input-label" for="sugar-substitiute">сахарозаменитель</label>
-              <input class="inputs-group__input-checkbox visually-hidden" id="water" name="additionals" value="water" type="checkbox"><label class="inputs-group__input-label" for="water">питьевая вода</label>
-              <input class="inputs-group__input-checkbox visually-hidden" id="milk" name="additionals" value="milk" type="checkbox"><label class="inputs-group__input-label" for="milk">молоко</label>
-              <input class="inputs-group__input-checkbox visually-hidden" id="vitamins" name="additionals" value="vitamins" type="checkbox"><label class="inputs-group__input-label" for="vitamins">витамины</label>
-            </div>
-          </fieldset>
-          <div class="form-cat-program__button-container">
-            <button class="form-cat-program__button" type="submit">отправить заявку</button>
-            <p class="form-cat-program__requireds-description">* — Обязательные поля</p>
-          </div>
-        </form>
-      {% include "./templates/contacts.twig" %}
-    </main>
-  {% include "./templates/footer.twig" %}
-</body>
-
-</html>
+      <fieldset class="inputs-group inputs-group--type_contacts">
+        <legend class="inputs-group__group-title"><span class="inputs-group__group-title-text inputs-group__group-title-text--contacts">Контактные данные (владельца кота)</span></legend>
+        <div class="inputs-group inputs-group--contacts-container">
+          <label class="inputs-group__input-label inputs-group__input-label--email" for="email">
+            E-mail:*
+            <input class="inputs-group__input" id="email" name="email" type="email" required value="kuklachev@gmail.com" placeholder="Введите ваш E-mail">
+            <svg class="inputs-group__contacts-icon">
+              <use href="./img/contacts.svg#email"></use>
+            </svg>
+          </label>
+          <label class="inputs-group__input-label inputs-group__input-label--phone" for="phone">
+            Телефон:*
+            <input class="inputs-group__input" id="phone" name="phone" type="tel" required value="8 (960) 900-60-90" placeholder="Введите номер вашего телефона">
+            <svg class="inputs-group__contacts-icon">
+              <use xlink:href="./img/contacts.svg#phone"></use>
+            </svg>
+          </label>
+        </div>
+      </fieldset>
+        <label class="inputs-group inputs-group--comment-label">
+          <span class="inputs-group__group-title"><span class="inputs-group__group-title-text inputs-group__group-title-text--comment">Комментарий</span></span>
+          <textarea class="inputs-group__comment" name="comment" placeholder="Расскажите обо всех повадках кота"></textarea>
+        </label>
+      <fieldset class="inputs-group inputs-group--type_additionals">
+        <legend class="inputs-group__group-title inputs-group__group-title--additional"><span class="inputs-group__group-title-text inputs-group__group-title-text--additional">Дополнения</span></legend>
+        <div class="inputs-group__checkbox-container">
+          <input class="inputs-group__input-checkbox visually-hidden" id="sugar-substitiute" name="additionals" value="sugar-substitiute" type="checkbox" checked><label class="inputs-group__input-label" for="sugar-substitiute">сахарозаменитель</label>
+          <input class="inputs-group__input-checkbox visually-hidden" id="water" name="additionals" value="water" type="checkbox"><label class="inputs-group__input-label" for="water">питьевая вода</label>
+          <input class="inputs-group__input-checkbox visually-hidden" id="milk" name="additionals" value="milk" type="checkbox"><label class="inputs-group__input-label" for="milk">молоко</label>
+          <input class="inputs-group__input-checkbox visually-hidden" id="vitamins" name="additionals" value="vitamins" type="checkbox"><label class="inputs-group__input-label" for="vitamins">витамины</label>
+        </div>
+      </fieldset>
+      <div class="form-cat-program__button-container">
+        <button class="form-cat-program__button" type="submit">отправить заявку</button>
+        <p class="form-cat-program__requireds-description">* — Обязательные поля</p>
+      </div>
+    </form>
+  {% include "./templates/contacts.twig" %}
+</main>
+{% endblock page__main %}
