--- a/source/catalog.html
+++ b/source/catalog.html
@@ -16,7 +16,7 @@
             "product-card__image",
             "./img/catalog/",
             "chicken-500",
-            ".png",
+            "png",
             "Корм для котов со вкусом курицы",
             "140",
             "112"
@@ -39,7 +39,7 @@
           "product-card__image",
           "./img/catalog/",
           "chicken-1000",
-          ".png",
+          "png",
           "Корм для котов со вкусом курицы",
           "140",
           "112"
@@ -62,7 +62,7 @@
           "product-card__image",
           "./img/catalog/",
           "fish-500",
-          ".png",
+          "png",
           "Корм для котов со вкусом рыбы",
           "140",
           "112"
@@ -85,7 +85,7 @@
           "product-card__image",
           "./img/catalog/",
           "fish-1000",
-          ".png",
+          "png",
           "Корм для котов со вкусом рыбы",
           "140",
           "112"
@@ -108,7 +108,7 @@
           "product-card__image",
           "./img/catalog/",
           "buckwheat-500",
-          ".png",
+          "png",
           "Гречка",
           "140",
           "112"
@@ -131,7 +131,7 @@
           "product-card__image",
           "./img/catalog/",
           "buckwheat-1000",
-          ".png",
+          "png",
           "Гречка",
           "140",
           "112"
@@ -154,7 +154,7 @@
           "product-card__image",
           "./img/catalog/",
           "rice-500",
-          ".png",
+          "png",
           "Рис",
           "140",
           "112"
