--- a/source/index.html
+++ b/source/index.html
@@ -21,7 +21,7 @@
               "promo__image",
               "./img/index/",
               "index-can",
-              ".png",
+              "png",
               "Корм для котов",
               "280",
               "270"
